--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "drizzle-kit": "^0.30.0",
     "drizzle-orm": "^0.39.0",
     "drizzle-zod": "^0.8.3",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
     "nitro": "latest",
